--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,20 +1,21 @@
-.logo{
-        justify-content: center;
-        display: flex;       
-        background: url('/assets/Poligono.png') no-repeat padding-box; 
-        padding-top: 150px;
-        padding-bottom: 215px;
-        background-position-y: bottom;
-        background-position-x: center;
+.logo {
+  justify-content: center;
+  display: flex;
+  background: url("/assets/Poligono.png") no-repeat padding-box;
+  padding-top: 150px;
+  padding-bottom: 215px;
+  background-position-y: bottom;
+  background-position-x: center;
 }
-@media only screen and (max-width:500px){
-    .logo{
-        padding-top: 50px;
-        padding-bottom: 64px;
-        background: url('/assets/Poligono-mobile.png') no-repeat padding-box;
-        img{
-            width: 215px;
-            height: 65px;
-        }
+@media only screen and (max-width: 760px) {
+  .logo {
+    padding-top: 50px;
+    padding-bottom: 64px;
+    background: url("/assets/Poligono-mobile.png") no-repeat padding-box;
+    background-position: center;
+    img {
+      width: 215px;
+      height: 75px;
     }
+  }
 }
