--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $white2: #ffffff19;
-$blue: #0f1825;
+$blue: #9FADC3;
 $lightBlue: #0d316765;
 $darkBlue: #0d0d1b;
 $black: #13171d;
