--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,7 @@ $white: #ffffff;
 $white2: #ffffff19;
 $blue: #9FADC3;
 $lightBlue: #0d316765;
-$darkBlue: #0d0d1b;
+$darkBlue: #262E3A;
 $black: #13171d;
 $grey: #858585;
 $lightGray: #00000029;
