--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -14,6 +14,10 @@
   opacity: 1;
   color: $white;
 }
+.btn-darkBlue {
+  background-color: $darkBlue;
+  color: $white;
+}
 
 .btn-darkGrey {
   background: $darkGrey 0% 0% no-repeat padding-box;
@@ -25,4 +29,44 @@
     font: normal normal 600 9px/11px Montserrat;
     padding: 5px 10px 5px 10px;
   }
+}
+.dropdown-content {
+  position: absolute;
+  inset: 0px auto auto 0px;
+  margin: 0px;
+  transform: translate(429px, 1017px);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  background: $white;
+  border-radius: 15px;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12.5px 25px 12.5px 25px;
+  text-decoration: none;
+  text-align: right;
+  letter-spacing: 0px;
+  font: italic normal 300 13px/16px Montserrat;
+  letter-spacing: 0px;
+}
+.dropdown-content a:first-child {
+  padding-top: 25px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+.dropdown-content a:last-child {
+  padding-bottom: 25px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.dropdown-content a:hover {
+  color: black;
+
+  background: $blue;
+  text-decoration: none;
 }
