--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,12 @@
   height: 100;
   overflow-y: auto;
 }
+hr {
+  border: 0;
+  border-top: 1px solid #eee;
+  border-style: ridge;
+  width: 75%;
+  padding: 0;
+  margin: 0;
+  align-self: center;
+}
