--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -92,5 +92,40 @@
   align-content: center;
   justify-content: space-between;
   align-items: center;
-  width: 200px;
+  width: 300px;
+}
+.stream-name {
+  font: normal bold 16px/19px Montserrat !important;
+  align-content: center;
+  align-items: center;
+  display: flex;
+}
+.ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.274) !important;
+}
+@media only screen and (max-width: 760px) {
+  .stream-name {
+    font: normal bold 10px/13px Montserrat !important;
+  }
+  .stream-button {
+    width: 215px;
+    font: italic normal 300 10px/13px Montserrat !important;
+  }
+  strong img {
+    width: 15px;
+    height: 15px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  .btn-favorite {
+    padding: 4px 4px 4px 4px !important;
+    margin-right: 8px !important;
+    margin-top: 16px !important;
+  }
+  .movie-duration {
+    font: normal normal 300 8px/10px Montserrat !important;
+  }
+  .movie-title {
+    font: normal normal bold 10px/13px Montserrat !important;
+  }
 }
