--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -1,3 +1,6 @@
+button {
+  cursor: pointer;
+}
 .btn {
   border-radius: 26px;
   opacity: 1;
@@ -29,6 +32,17 @@
     font: normal normal 600 9px/11px Montserrat;
     padding: 5px 10px 5px 10px;
   }
+  .dropdown-content a {
+    font: normal normal 300 10px/13px Montserrat;
+    padding: 5px 12px 5px 12px !important;
+  }
+  .dropdown-content li {
+    font: normal normal 300 10px/13px Montserrat !important;
+    padding: 5px 12px 5px 12px !important;
+  }
+  button i {
+    font-size: 13.2px;
+  }
 }
 .dropdown-content {
   position: absolute;
@@ -51,8 +65,39 @@
   text-decoration: none;
   text-align: right;
   letter-spacing: 0px;
+  border: 0;
+  border-top: 1px solid #eee;
   font: italic normal 300 13px/16px Montserrat;
   letter-spacing: 0px;
+  border-top-width: 75%;
+}
+.dropdown-content li {
+  color: black;
+  cursor: pointer;
+  list-style: none;
+  padding: 16px 25px 16px 25px;
+  text-decoration: none;
+  text-align: left;
+  letter-spacing: 0px;
+  text-align: left;
+  font: normal normal medium 16px/19px Montserrat;
+  letter-spacing: 0px;
+}
+.dropdown-content li:first-child {
+  padding-top: 16px;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+.dropdown-content li:last-child {
+  padding-bottom: 16px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.dropdown-content li:hover {
+  color: $white;
+
+  background: $blue;
+  text-decoration: none;
 }
 .dropdown-content a:first-child {
   padding-top: 25px;
