ajuste padding favorite

--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -27,7 +27,7 @@ button {
   color: $white;
 }
 .btn-favorite {
-  padding: 14px 16px 13px 16px;
+  padding: 14px 16px 13px 16px !important;
 }
 .btn-favorite img {
   width: 16.66px;
