--- a/src/components/movieCard/MovieCard.scss
+++ b/src/components/movieCard/MovieCard.scss
@@ -131,10 +131,10 @@
     margin-top: 16px !important;
   }
   .movie-duration {
-    font: normal normal 300 8px/10px Montserrat !important;
+    font: normal normal 300 10px/10px Montserrat !important;
   }
   .movie-title {
-    font: normal normal bold 10px/13px Montserrat !important;
+    font: normal normal bold 13px/13px Montserrat !important
   }
   .movie-card:hover .movie-card-body {
     margin-left: 8px;
