--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -98,12 +98,12 @@ button {
   letter-spacing: 0px;
 }
 .dropdown-content li:first-child {
-  padding-top: 16px;
+  padding-top: 16px !important;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
 .dropdown-content li:last-child {
-  padding-bottom: 16px;
+  padding-bottom: 16px !important;
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
 }
